# hotarubukuro

./: .gitattributes  .gitignore  .renvignore  ANALYSIS_REVIEW_V11.md  ANALYSIS_REVIEW_V17.md  ANALYSIS_REVIEW_V20.md  ANALYSIS_REVIEW_V22.md  Code_S1.py  Code_S2.py  Code_S3.R  Code_S3.Rmd  Code_S4.R  Data_S1.csv  EXTREME_HUMAN_DIAGNOSTIC_DESIGN_V18.md  FINAL_ANALYSIS_PIPELINE.md  HUMAN_LANDSCAPE_EXTREME_DESIGN_V19.md  LOCAL_PAIR_HIERARCHY_DESIGN_V17.md  MANUSCRIPT_STORY_V11.md  MECHANISM_WORKFLOW_V3.md  MULTISCALE_HOTSPOT_DESIGN_V15.md  POLLINATOR_INTERPRETATION.md  PREDICTIVE_REPLICATION_DESIGN_V16.md  PUBLIC_RASTER_DESIGN.md  README.md  REPRODUCIBILITY_REVIEW.md  Supplementary_Code_S1.py  Supplementary_Code_S2.py  figure1.R  figure2.R  figure3.R  figure4.R  figure5.R  final.Rmd  final_v11.Rmd  hotarubukuro.Rmd  pyproject.toml  requirements.txt  run_local.R  sdm.R  sdm2.R  (+5 more)
R/: analysis_core.R  bombus_availability.R  bombus_community_fingerprint.R  data_contract.R  environment_spatial.R  final_registry.R  heavy_models.R  hotspot_candidates.R  human_landscape_features.R  local_human_context.R  local_pigmented_isolates.R  local_transition_pairs.R  multiscale_hotspots.R  natural_biotic_covariates.R  natural_predictive_model.R  packages.R  phenotype_hurdle.R  pigmentation_workflow.R  pipeline_support.R  public_predictors.R  raster_sources.R  reanalysis.R  sdm.R
analysis/: README.md  diagnose_all_extraction.R  diagnose_environment_extraction.R  run_bombus_availability.R  run_publication_workflow.R
bee5/: ardens.tif  beaticola.tif  consobrinus.tif  diversus.tif
(+261 files in other folders)
